# MCR

./: CMakeLists.txt  README.md  mod.json
.github/workflows/: build.yml
src/: MCRLayer.cpp  MCRLayer.hpp  MacroManager.cpp  MacroManager.hpp  main.cpp
